getGroupsForTeacher method in TeacherService changed